ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: nginx.quentin.k8s.osp.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
